# celery-sigkill-task-lost-reproduction

./: Makefile  README.md
repro/: pyproject.toml
repro/repro/: main.py  worker.py
